--- a/lib_app/app/views/library_users/index.html.erb
+++ b/lib_app/app/views/library_users/index.html.erb
@@ -1,11 +1,9 @@
 <div><%= @user.first_name %> is a member of the following libraries</div>
 
-<% @libraries.each do |library| %>
-  <div>
-    <h3><%= library.name %></h3>
-    <% if @current_user %> 
-      <%= button_to "Join", library_users_path(library) %>
-    <% end %>
-  </div>
-  <br>
-<% end %>
+<ul>
+  <% @libraries.each do |lib| %>
+    <li><%= lib.name %></li>
+  <% end %>
+</ul>
+
+<button><a href = "/libraries">Join more libraries!</button>
