--- a/lib_app/app/views/libraries/new.html.erb
+++ b/lib_app/app/views/libraries/new.html.erb
@@ -10,3 +10,8 @@
   </div>
   <%= f.submit %>
 <% end %>
+<br>
+
+<%= button_to 'View All Libraries', libraries_path, :method => :get %><br>
+
+<%= button_to 'Logout', logout_path, method: :delete %>
