--- a/lib_app/app/views/users/index.html.erb
+++ b/lib_app/app/views/users/index.html.erb
@@ -3,3 +3,9 @@
 <div>
 There are currently <%= @users.length %> signed_up
 </div>
+
+<h3>Sign Up</h3>
+<%= button_to 'Sign Up', new_user_path, :method => :get %><br>
+
+<h3>Already Registered?</h3>
+<%= button_to 'Login', new_session_path, :method => :get %><br>
